--- a/LeNet-Lab-Solution.ipynb
+++ b/LeNet-Lab-Solution.ipynb
@@ -22,11 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "()\n",
+      "Image Shape: (28, 28, 1)\n",
+      "()\n",
+      "Training Set:   55000 samples\n",
+      "Validation Set: 5000 samples\n",
+      "Test Set:       10000 samples\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "\n",
@@ -51,9 +66,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The MNIST data that TensorFlow pre-loads comes as 28x28x1 images.\n",
+    "## The MNIST data that TensorFlow pre-loads comes as 28x28x1 images.\n",
     "\n",
-    "However, the LeNet architecture only accepts 32x32xC images, where C is the number of color channels.\n",
+    "However, the LeNet architecture only accepts 32x32xC images, where C is the number of color channels. One in case of grayscale.\n",
     "\n",
     "In order to reformat the MNIST data into a shape that LeNet will accept, we pad the data with two rows of zeros on the top and bottom, and two columns of zeros on the left and right (28+2+2 = 32).\n",
     "\n",
@@ -62,11 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Image Shape: (32, 32, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -75,7 +96,9 @@
     "X_validation = np.pad(X_validation, ((0,0),(2,2),(2,2),(0,0)), 'constant')\n",
     "X_test       = np.pad(X_test, ((0,0),(2,2),(2,2),(0,0)), 'constant')\n",
     "    \n",
-    "print(\"Updated Image Shape: {}\".format(X_train[0].shape))"
+    "print(\"Updated Image Shape: {}\".format(X_train[0].shape))\n",
+    "#dummy = X_train[0]\n",
+    "#np.pad(dummy,((0,0),(2,2),(2,2),(0,0)), 'constant')"
    ]
   },
   {
@@ -91,11 +114,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y_train shape: (32, 32, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAFsAAABZCAYAAABR/liSAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAABddJREFUeJztnF9oU1ccxz+/xgYfVphlEHSVbszQN3Ey28oeHOigzIdu\nD8p8GAwH7kVYFNm0iA5xUFg3BScDR4t7WJlDxY5SGBW2Pfgw+4fQTcfWUlZbbZWtm2snMtf+9pCb\nm6S2zU1ucvKn5wMhuSe59/z49pvfOefm1yOqisUMFYUOYCVhxTaIFdsgVmyDWLENYsU2iBXbIL7E\nFpEmEflFREZE5HCugipXJNtFjYgEgF+Bl4EJoA/Yo6o3cxdeebHKx7n1wIiqjgKIyJdAM7Ck2CJS\ntstVVZV0n/GTRp4GxpOOJ5y2FERkn4j0i0i/j77KAj/O9oSqngPOQXk72wt+nH0bWJ90XOO0WZbA\nj9h9QFhEnhWRIPA68HVuwipPsk4jqvqfiOwHvgECQIeq3shZZFkQiUQAOHXqFCdOnADg+PHjhQwp\nBV85W1V7gJ4cxVL2ZD3PzqqzPA2Qq1evBmB4eBiAdevWUV9fD8DAwEA+unyMfE/9LBmS96lfvqmo\nqODMmTNAzNEA3d3dRKPRQoa1KCUvdnNzM3v37k1pu3XrFnNzcwWKaGlsGjFIyTt7w4YN7uuRkREA\njh49WqhwlsU62yAl6+y6ujoAd/ECuAPl/fv3CxJTOkpW7KamJgCCwSDz8/MAjI+PL3dKwbFpxCAl\n5+yKipg/du7c6bYNDQ0B0NXVVZCYvGKdbZCSc/bWrVsB2L59u9t28uTJQoWTEdbZBik5Z8fv5iVz\n/fr1AkSSOdbZBrFiG6Tk0khjY2PKcXd3N5OTkwWKJjOssw1Scs7esmVLyvGjR4/c5boXIpGI++24\ncOECAH19fQBMTEzkKMrFKTmxM2Xbtm0AHD4cq/vcsWOHuwrdtWsXAHfu3AGgtbWVs2fP5i0Wm0YM\nUrbOrqmpAaC3txeAQCDgvjc9PQ1AVVUVkPjt8vTp0zx8+BCA9vb2nMdknW2QknN2fBCrra0FoKGh\ngerqaiDh2FAoxJUrV4BURwN0dnZy5MgRAMLhMAA9PbE6o2AwSEtLCwBXr14FYGxsLGexp3W2iKwX\nkW9F5KaI3BCRd5z2ahHpFZFh53lNzqIqU9JWRInIWmCtqg6KSBUwALwKvAlMq2qr8y8ea1T1vTTX\n8l0RdeDAAQDa2trcts7OTiBxPzsQCLhtCwmHw4yOjqa0Xbt2DUhdMB06dAiI1Q16wUtFVMblZyLS\nBXziPF5S1UnnD/KdqtalOde32JWVlQAcO3YMgIMHD7rlZ3Hm5+fd6d1CBgcH2bhxY0rbqlWJbDoz\nMwPEpogA/f3eavi9iJ1RzhaRZ4DngR+AkKrG18lTQGiJc/YB+zLpp1zx7GwReQL4HvhAVS+LyF+q\n+mTS+3+q6rJ5Ox+FlY2Nje5XvqGhAUhM5TIlGo1y/vx5IPFLvVdyVlgpIpXAJeALVb3sNN910kc8\nr9/LKLoViJcBUoDPiQ2GkaT2D4E/kgbIalV9N8218lqfHArFMtnmzZu5ePEiwGP5/MGDB3R0dACJ\neyP37sV8MjU1xezsbFZ95ypnvwi8AfwoIvHS0BagFfhKRN4CxoDdWUW5giiLYvhiwBbDFxlWbINY\nsQ1ixTaIFdsgVmyDWLENYsU2iBXbIFZsg1ixDWLFNogV2yBWbIOYrhv5HfjHeS52nsJ7nLVePmT0\nfjaAiPSr6gtGO82CfMRp04hBrNgGKYTY5wrQZzbkPE7jOXslY9OIQYyJXcx7bS9Tqfu+iNwWkajz\neMVXPybSSLHvtb1Mpe5uYFZV25a9gEdMOdvda1tV/wXie20XBao6qaqDzusZ4GcW2Z7aL6bE9rTX\ndjGwoFIXYL+IDIlIh9+CfztAJuFU6l4CIqr6N/Ap8BywCZgEPvJzfVNiF/1e24tV6qrqXVWdU9V5\n4DNi6TBrTIld1HttO5W67cDPqvpxUvvapI+9Bvzkpx8jd/2Kca/tBSxVqbtHRDYBCvwGvO2nE7uC\nNIgdIA1ixTaIFdsgVmyDWLENYsU2iBXbIFZsg/wP9kLhY4w9a3UAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7ff4781a81d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -107,7 +146,8 @@
     "\n",
     "plt.figure(figsize=(1,1))\n",
     "plt.imshow(image, cmap=\"gray\")\n",
-    "print(y_train[index])"
+    "print(\"Y_train shape: {}\".format(X_train[0].shape))\n",
+    "\n"
    ]
   },
   {
@@ -118,15 +158,15 @@
     "\n",
     "Shuffle the training data.\n",
     "\n",
-    "You do not need to modify this section."
+    "You do not need to modify this section.\n",
+    "\n",
+    "This is in order to make sure, that time axis does not have any influence on the result."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.utils import shuffle\n",
@@ -146,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -200,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -277,10 +317,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = tf.placeholder(tf.float32, (None, 32, 32, 1))\n",
@@ -300,10 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "rate = 0.001\n",
@@ -327,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -366,11 +402,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n",
+      "()\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.967\n",
+      "()\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "()\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "()\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.986\n",
+      "()\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.986\n",
+      "()\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "()\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "()\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "()\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.985\n",
+      "()\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.989\n",
+      "()\n",
+      "Model saved\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
@@ -410,11 +484,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./lenet\n",
+      "Test Accuracy = 0.989\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
@@ -422,26 +503,35 @@
     "    test_accuracy = evaluate(X_test, y_test)\n",
     "    print(\"Test Accuracy = {:.3f}\".format(test_accuracy))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   },
   "widgets": {
    "state": {},
@@ -449,5 +539,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
